--- a/src/main/resources/templates/portal/iv/survey/question/write.html
+++ b/src/main/resources/templates/portal/iv/survey/question/write.html
@@ -53,8 +53,8 @@
 				<th>필수선택 / 선택가능</th>
 				<td>
 					<select name="fgMandatory" id="fgMandatory">
-						<option value="0">필수선택</option>
-						<option value="1">선택가능</option>
+						<option value="Y">필수선택</option>
+						<option value="N">선택가능</option>
 					</select>
 				</td>
 			</tr>
