--- a/src/main/resources/templates/portal/iv/survey/view.html
+++ b/src/main/resources/templates/portal/iv/survey/view.html
@@ -311,7 +311,7 @@
 				},
 				{targets: 3, className: "dt-body-center", 
 					render: function(data, type, row) {
-						return {'0': '필수선택', '1': '선택가능'}[data];
+						return {'Y': '필수선택', 'N': '선택가능'}[data];
 					}
 				},
 				{targets: 4, className: "dt-body-center"},
