--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -436,7 +436,7 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 .right {text-align: right;}
 
 /*td.link {text-decoration: underline; color: #4183C4; cursor: pointer;}*/
-td.link {text-decoration: underline; color: cursor: pointer;}
+td.link {text-decoration: underline; color:#4183C4; cursor: pointer;}
 td.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 
 .empty-message-area {
