--- a/src/main/resources/templates/portal/iv/survey/popup/vote.html
+++ b/src/main/resources/templates/portal/iv/survey/popup/vote.html
@@ -7,13 +7,17 @@
 	
 	<div class="block-header" >
 		<div class="block-title" th:text="설문참여"></div>
+		<div class="block-button-area">
+			<button id="BTN_save" type="button" th:text="투표하기" onclick="Vote.save();"></button>
+			<button id="BTN_back" type="button" th:text="닫기" onclick="window.close();"></button>
+		</div>
 	</div>	
 	
 	<div class="condition-area">
 		<table class="condition table-fixed">
 			<tr>
 				<td style="width:20%">[[${survey?.title}]]</td>
-				<td>
+				<td th:style="${#lists.isEmpty(survey?.uploadFileLists) ? 'display:none' : ''}">
 					첨부파일 : <span th:each="uploadFileList : ${survey?.uploadFileLists}">
 						<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a>
 						(<span th:text="${uploadFileList.displayFileSize}"></span>)
@@ -27,8 +31,8 @@
 	<br/><br/>
 	<table class="condition">
 		<tbody>
-			<tr th:each="question, index : ${voteItems}">
-				<td th:switch="${question.type}">
+			<tr th:each="voteItem, index : ${voteItems}">
+				<td th:switch="${voteItem.type}">
 					<!--  객관식 -->
 					<table th:case="0">
 						<tr>
@@ -37,16 +41,16 @@
 									<tr>
 										<td>
 											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:text="${question.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
-											<span style="color:blue;" th:text="${question.title}"></span>
+											<span style="color:red;" th:text="${voteItem.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
+											<span style="color:blue;" th:text="${voteItem.title}"></span>
 										</td>
 									</tr>
 								</table>
 								<table>
-									<tr th:each="item : ${question.items}">
+									<tr th:each="item : ${voteItem.items}">
 										<td>
 											<span>
-												<input th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}" type="radio" /> 
+												<input th:name="'Q_'+${voteItem.sqSeq}" th:value="${item.siSeq}" type="radio" /> 
 											</span>
 											<span>[[${item.title}]]</span>
 										</td>
@@ -64,16 +68,16 @@
 									<tr>
 										<td>
 											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:text="${question.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
-											<span style="color:blue;" th:text="${question.title}"></span>
-											<span>(다중선택개수 : [[${question.mandatoryCnt}]])</span>
+											<span style="color:red;" th:text="${voteItem.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
+											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span>(다중선택개수 : [[${voteItem.mandatoryCnt}]])</span>
 										</td>
 									</tr>
 								</table>
 								<table>
-									<tr th:each="item : ${question.items}">
+									<tr th:each="item : ${voteItem.items}">
 										<td>
-											<span><input th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}" type="checkbox" /></span>
+											<span><input th:name="'Q_'+${voteItem.sqSeq}" th:value="${item.siSeq}" type="checkbox" /></span>
 											<span>[[${item.title}]]</span>
 										</td>
 									</tr>
@@ -90,16 +94,15 @@
 									<tr>
 										<td>
 											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:text="${question.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
-											<span style="color:blue;" th:text="${question.title}"></span>
+											<span style="color:red;" th:text="${voteItem.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
+											<span style="color:blue;" th:text="${voteItem.title}"></span>
 										</td>
 									</tr>
 								</table>
 								<table>
 									<tr>
 										<td>
-											<textarea th:name="'Q_'+${question.sqSeq}" th:id="'Q_'+${question.sqSeq}" rows="5" cols="50">
-											</textarea>
+											<textarea th:name="'Q_'+${voteItem.sqSeq}" th:id="'Q_'+${voteItem.sqSeq}" rows="5" cols="50"></textarea>
 										</td>
 									</tr>
 								</table>
@@ -115,14 +118,14 @@
 									<tr>
 										<td>
 											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:text="${question.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
-											<span style="color:blue;" th:text="${question.title}"></span>
+											<span style="color:red;" th:text="${voteItem.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
+											<span style="color:blue;" th:text="${voteItem.title}"></span>
 											<span>(가중치의 합 : 10점)</span>
 										</td>
 									</tr>
 								</table>
 								<table>
-									<tr th:each="item : ${question.items}">
+									<tr th:each="item : ${voteItem.items}">
 										<td>
 											<span>
 												<select th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}">
@@ -154,17 +157,17 @@
 									<tr>
 										<td>
 											<span style="color:blue;" th:text="${index.count}+'.'"></span>
-											<span style="color:red;" th:text="${question.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
-											<span style="color:blue;" th:text="${question.title}"></span>
+											<span style="color:red;" th:text="${voteItem.fgMandatory} == 'Y' ? '[ 필수선택 ]': '[ 선택가능 ]'"></span>
+											<span style="color:blue;" th:text="${voteItem.title}"></span>
 										</td>
 									</tr>
 								</table>
 								<table>
-									<tr th:each="item : ${question.items}">
+									<tr th:each="item : ${voteItem.items}">
 										<td>
 											<span>
 												<select th:name="'I_'+${item.siSeq}" th:id="'I_'+${item.siSeq}">
-													<option th:each="idx, itemIndex : ${question.items}" value="">[[${itemIndex.count}]] 우선순위</option>
+													<option th:each="idx, itemIndex : ${voteItem.items}" th:value="${itemIndex.count}">[[${itemIndex.count}]] 우선순위</option>
 												</select>
 											</span>
 											<span>[[${item.title}]]</span>
@@ -184,10 +187,190 @@
 <script th:inline="javascript">
 $(function(){
 	ProgressBar.hide();
-	
-	/*[# th:each="question, index : ${voteItems}"]*/
-	console.log( /*[[${question.sqSeq}]]*/);
-	/*[/]*/	
 });
+
+let Vote = {
+	applyList: {},
+	lastIndex: 0,
+	save: function() {
+		if (!this.setAnswers()) {
+			return false;
+		}
+		
+		let url = /*[[${BASE_PATH}]]*/;
+		url += "/survey/vote/save";
+
+		let applyList = this.applyList;
+		JpUtilsAjax.post({
+			url: url,
+			method: "POST",
+			data: applyList,
+			beforeSend: function(jqXHR, settings)
+			{
+				ProgressBar.show();
+			},		
+		    success: function(response, textStatus, jqXHR)
+		    {
+		    	alert('성공적으로 처리되었습니다.');
+		    	window.close();
+		    },
+		    error: function(jqXHR, textStatus, errorThrown)
+	    	{
+		    	alert('처리에 실패하였습니다');
+		    	window.close();
+	    	}
+		});
+	},
+	setAnswers: function() {
+		let isValid = true;
+		this.applyList = {};
+		this.lastIndex = 0;
+		
+		let ts = this;
+		let voteItems = /*[[${voteItems}]]*/;
+		$.each(voteItems, function(index, voteItem) {
+			sqSeq = voteItem.sqSeq;
+			
+			switch (voteItem.type) {
+				case '0':	//객관식
+					if (!ts.setType0Answer(voteItem)) {
+						isValid = false;
+						return false;
+					}
+				break;
+				
+				case '1':	//다중객관식
+					if (!ts.setType1Answers(voteItem)) {
+						isValid = false;
+						return false;
+					}
+				break;
+				
+				case '2':	//주관식
+					if (!ts.setType2Answer(voteItem)) {
+						isValid = false;
+						return false;
+					}	
+				break;
+				
+				case '3':	//가중치
+					if (!ts.setType3Answers(voteItem)) {
+						isValid = false;
+						return false;
+					}
+				break;
+				
+				case '4':	//우선순위
+					if (!ts.setType4Answers(voteItem)) {
+						isValid = false;
+						return false;
+					}
+				break;
+			}
+		});
+		
+		if (!isValid) {
+			return false;
+		}
+		//console.log(this.applyList);
+		return true;
+	},
+	
+	//객관식
+	setType0Answer: function(voteItem) {	
+		let val = $('input:radio[name=Q_'+ voteItem.sqSeq +']:checked').val();
+		if (!JpUtilsString.isNotEmpty(val)) {
+			alert('['+ voteItem.title + ']을 선택해주세요');
+			return false;
+		}
+		
+		this.setApplyList(voteItem.sqSeq, val, '');
+		
+		return true;
+	},
+	
+	//다중객관식
+	setType1Answers: function(voteItem) {	
+		let checked = $('input:checkbox[name=Q_'+voteItem.sqSeq+']:checked');
+		if (checked.length == 0) {
+			alert('['+ voteItem.title + ']을 선택해주세요');
+			return false;
+		}
+		
+		if (checked.length > voteItem.mandatoryCnt) {
+			alert('['+ voteItem.title + '] 최대 선택 개수를 초과합니다');
+			return false;
+		}
+		
+		let ts = this;
+		$(checked).each(function(idx, element) {
+			ts.setApplyList(voteItem.sqSeq, element.value, '');
+	    });
+		return true;
+	},
+	
+	//주관식
+	setType2Answer: function(voteItem) {	
+		let val = $("#Q_"+voteItem.sqSeq).val();
+		if (!JpUtilsString.isNotEmpty(val)) {
+			alert('['+ voteItem.title + ']을/를 입력해주세요');
+			return false;
+		}
+		
+		this.setApplyList(voteItem.sqSeq, 0, val);
+		
+		return true;
+	},
+	
+	//가중치
+	setType3Answers: function(voteItem) {
+		let sum = 0;
+		let answer = 0;
+		let ts = this;
+		$(voteItem.items).each(function(idx, obj) {
+			answer = parseInt($("#I_"+obj.siSeq).val(), 10);
+			sum += answer;
+			
+			ts.setApplyList(voteItem.sqSeq, obj.siSeq, answer);
+		});
+		
+		if (sum != 10) {
+			alert('['+ voteItem.title + ']의 합은 10점입니다');
+			return false;
+		}
+		return true;
+	},
+	
+	//우선순위
+	setType4Answers: function(voteItem) {
+		let arr = [];
+		let ts = this;
+		$(voteItem.items).each(function(idx, obj) {
+			answer = parseInt($("#I_"+obj.siSeq).val(), 10);
+			arr.push(answer);
+			
+			ts.setApplyList(voteItem.sqSeq, obj.siSeq, answer);
+		});
+		
+		let unqiue = new Set(arr);
+		if (arr.length != unqiue.size) {
+			alert('['+ voteItem.title + ']의 우선순위가 중복 되었습니다');
+			return false;
+		}
+		return true;
+	},
+	
+	setApplyList: function(sqSeq, siSeq, answer) {
+		let index = this.lastIndex;
+		this.applyList['items['+index+'].sqSeq'] = sqSeq;
+		this.applyList['items['+index+'].siSeq'] = siSeq;
+		this.applyList['items['+index+'].answer'] = answer;
+		index++;
+		
+		this.lastIndex = index;
+	}
+}
+
+
 </script>
 </th:block>	
