반품생성 개발

--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
@@ -145,7 +145,7 @@ $(function(){
 	
 			if ($td.find("input:checkbox").is(":checked"))
 			{
-				selectedItems.push($tableObj.row($td));
+				selectedItems.push($tableObj.row($td).data());
 			};
 		};
 
