--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
@@ -5,6 +5,21 @@
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
 	
 <th:block layout:fragment="content">
+	<!-- Modal for upload simulation -->	
+	<div class="dropzone-dimmer dimmer"></div>		
+	<div class="dropzone-area">
+		<div class="dropzone-area-top"></div>
+		<div class="dropzone-body dropzone-click-zone">
+			<div class="dropzone-click-zone" style="height:20px"></div>
+			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/icon/upload_file.png"/>
+			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_HOW_TO_UPLOAD_SIMULATION}"></div>
+		</div>
+		<div class="dropzone-bottom dropzone-click-zone">
+			<button type="button" onclick="UploadModal.hide()">[[#{HQP_B_CANCEL}]]</button>
+		</div>
+	</div>
+	<!-- Modal for upload simulation -->
+
 	<div class="block-header">
 		<div class="block-title" th:text="#{PLTF_L_1650325527557}"></div><!-- Claim Create -->
 		<div class="block-button-area">
@@ -71,7 +86,7 @@
 						<th></th>
 						<th colspan="3" th:text="#{HQP_L_CLAIM_REASON}"></th>
 						<th colspan="4" th:text="#{HQP_L_ADDITIONAL_TEXT}"></th>
-						<th colspan="3" th:text="#{HQP_L_ATTACHMENT}"></th>
+						<th colspan="3"><span th:text="#{HQP_L_ATTACHMENT}"/><div class="split3"></div><button type="button" class="small_button upload" th:text="#{HQP_B_UPLOAD}"/></th>
 					</tr>
 					<tr>
 						<td></td>
@@ -308,6 +323,92 @@ function setSelectedItems(rows)
 			};
 		});
 	});
+	
+	$("button.upload").on("click", function() {
+		UploadModal.show();
+	});
 };
+
+let UploadModal = {};
+UploadModal.show = function() {
+	let width = 480;
+	let height = 230;
+	let left = ($(window).innerWidth() - width) * 0.5;
+	let top = ($(window).innerHeight() - height) * 0.5;
+
+	$(".dropzone-area").css({
+		"width": width,
+		"height": height,
+		"left": left,
+		"top": top
+	});
+	
+	$(".dropzone-dimmer").css({
+		"width": "100%",
+		"height": "100%"
+	});
+
+	$(".dropzone-dimmer, .dropzone-area").show();
+};
+
+UploadModal.hide = function()
+{
+	$(".dropzone-dimmer, .dropzone-area").hide();
+};
+
+$(".dropzone-click-zone").dropzone({
+	url: "[[${BASE_PATH}]]/claim/create/attachment/upload",
+	maxFilesize: 5, //MB
+	//acceptedFiles: ".xls,.xlsx",
+	accept: function(file, done)
+	{
+		done();
+	},
+	addedfile: function(file)
+	{
+	},
+	sending: function(file, xhr, formData)
+	{
+		xhr.setRequestHeader(JpUtilsSecurity.CSRF.NAME, JpUtilsSecurity.CSRF.TOKEN);
+	},
+	success: function(file, response)
+	{
+		let result = response.RESULT;
+		
+		alert(result.ORIGIN_FILE_NAME);
+		
+		/*
+		resultMap.put("ORIGIN_FILE_NAME", multipartFile.getOriginalFilename());
+		resultMap.put("SAVED_FILE_NAME", claimCreateService.saveTempFile(multipartFile));
+		resultMap.put("CONTENT_TYPE", multipartFile.getContentType());
+		resultMap.put("SIZE", multipartFile.getSize());		
+		*/
+		
+		//$("#fileName").val(response.RESULT);
+		//doSimulation();
+	},
+	complete: function(file)
+	{
+	},
+	error: function(file, error, xhr)
+	{
+	},
+	drop: function()
+	{
+		//console.log("drop");
+	},
+	dragenter: function(e)
+	{
+		//console.log("dragenter");
+	},
+	dragover: function(e)
+	{
+		//console.log("dragover");
+	},
+	dragleave: function(e)
+	{
+		//console.log("dragleave");
+	}
+});
 </script>	
 </th:block>
