반품생성 개발

--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
@@ -8,7 +8,8 @@
 	<script>
 	const GLOBAL_CONST = {
 		"DATE_FORMAT": "[[${DATE_FORMAT}]]",
-		"TIME_FORMAT": "[[${TIME_FORMAT}]]"
+		"TIME_FORMAT": "[[${TIME_FORMAT}]]",
+		"DELIMITER": "[[${DELIMITER}]]"
 	};
 	</script>
 
