--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
@@ -26,21 +26,48 @@
 			<button id="BTN_create" type="button" th:text="#{HQP_B_CREATE}"></button>
 		</div>
 	</div>
+	
 	<div class="condition-area">
-	<table class="condition table-fixed">
-		<tbody>
-			<tr>
-				<th>
-					<div th:text="#{HQP_L_PO_NO}"></div><img src="/portal/img/icon/required.png" class="required" />
-				</th>
-				<td>
-					<div class="input-area">
-						<input type="text" id="poNo" name="poNo" class="custom-ui"/>
-					</div>
-				</td>			
-			</tr>
-		</tbody>
-	</table>
+		<table class="condition table-fixed">
+			<tbody>
+				<tr>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY1}"></th>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY2}"></th>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY3}"></th>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY4}"></th>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY5}"></th>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY6}"></th>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY7}"></th>
+					<th th:text="#{HQP_L_CLAIM_SUMMARY8}"></th>
+				</tr>
+				<tr>
+					<td data-key="summary1"></td>
+					<td data-key="summary2"></td>
+					<td data-key="summary3"></td>
+					<td data-key="summary4"></td>
+					<td data-key="summary5"></td>
+					<td data-key="summary6"></td>
+					<td data-key="summary7"></td>
+					<td data-key="summary8"></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<div class="condition-area">
+		<table class="condition table-fixed">
+			<tbody>
+				<tr>
+					<th>
+						<div th:text="#{HQP_L_PO_NO}"></div><img src="/portal/img/icon/required.png" class="required" />
+					</th>
+					<td>
+						<div class="input-area">
+							<input type="text" id="poNo" name="poNo" class="custom-ui"/>
+						</div>
+					</td>			
+				</tr>
+			</tbody>
+		</table>
 	</div>
 	<div class="split-row"></div>
 	
@@ -86,7 +113,7 @@
 						<th></th>
 						<th colspan="3" th:text="#{HQP_L_CLAIM_REASON}"></th>
 						<th colspan="4" th:text="#{HQP_L_ADDITIONAL_TEXT}"></th>
-						<th colspan="3"><span th:text="#{HQP_L_ATTACHMENT}"/><div class="split3"></div><button type="button" class="small_button upload" th:text="#{HQP_B_UPLOAD}"/></th>
+						<th colspan="3"><span th:text="#{HQP_L_ATTACHMENT}"></span><div class="split3"></div><button type="button" class="small_button upload" th:text="#{HQP_B_UPLOAD}"></button></th>
 					</tr>
 					<tr>
 						<td></td>
@@ -104,7 +131,7 @@
 						<td colspan="4">
 							<textarea style="width:100%; height:4em;" class="custom-ui" name="description"></textarea>
 						</td>
-						<td colspan="3"></td>
+						<td colspan="3" data-key="attachment"></td>
 					</tr>				
 				</tbody>
 			</table>
@@ -131,11 +158,42 @@ CLAIM_REASON2.push({
 </script>
 
 <script>
+let uploadingTarget;//현재 파일 업로드하고 있는 대상 element
+
 $(window).on("load", function() {
 	ProgressBar.hide();
 });
 
 $(function(){
+	JpUtilsAjax.get({
+		url: "[[${BASE_PATH}]]/claim/create/summary",
+		beforeSend: function(jqXHR, settings)
+		{
+			ProgressBar.show();
+		},		
+	    success: function(response, textStatus, jqXHR)
+	    {
+	    	let result = response.RESULT;
+	    	
+	    	$("[data-key=summary1]").text(result.B_AMT);
+	    	$("[data-key=summary2]").text(result.L_AMT);
+	    	$("[data-key=summary3]").text(result.A_AMT);
+	    	$("[data-key=summary4]").text(result.A_ROW);
+	    	$("[data-key=summary5]").text(result.A_PRICE);
+	    	$("[data-key=summary6]").text(result.A_ROW);
+	    	$("[data-key=summary7]").text(result.AO_AMT);
+	    	$("[data-key=summary8]").text(result.AO_ROW);
+	    },
+	    error: function(jqXHR, textStatus, errorThrown)
+    	{
+    	},
+	    complete: function(jqXHR, textStatus)
+	    {
+	    	ProgressBar.hide();
+	    }
+	});		
+	
+	
 	$("#BTN_add").on("click", function(){
 		Popup.open("[[${BASE_PATH}]]/claim/create/reference/order/popup/list", 1100, 600); 
 	});
@@ -151,8 +209,6 @@ $(function(){
 			$("#FORM_claim div.split-row-compact")[0].remove();//delete split row
 		}
 		catch (e) {};
-		
-		
 		
 		if ($("#FORM_claim input.check-all").length == 0)
 		{
@@ -222,6 +278,9 @@ $(function(){
 			{
 				alert("[[#{HQP_M_EMPTY_CLAIM_DESCRIPTION}]]");
 				$(this).focus();
+				
+				isValid = false;
+				
 				return false;
 			};
 		});
@@ -248,11 +307,8 @@ $(function(){
 		{
 			$("#FORM_claim input[name=poNo]").val($("#poNo").val());
 			
-			alert($("#FORM_claim input[name=poNo]").val());
-			
 			JpUtilsAjax.post({
 				url: "[[${BASE_PATH}]]/claim/create/save",
-				method: "POST",
 				data: $("#FORM_claim").serialize(),
 				beforeSend: function(jqXHR, settings)
 				{
@@ -261,8 +317,11 @@ $(function(){
 			    success: function(response, textStatus, jqXHR)
 			    {
 			    	let result = response.RESULT;
+			    	let claimNo = result.CLAIM_NO;
 			    	
-			    	alert(result.CLAIM_NO);
+			    	alert(JpUtilsString.replaceAll("[[#{HQP_M_CLAIM_CREATED}]]", "{0}", claimNo));
+			    	
+			    	document.location.href = "[[${BASE_PATH}]]/claim/display/list?pClaimNo=" + claimNo;
 			    },
 			    error: function(jqXHR, textStatus, errorThrown)
 		    	{
@@ -286,6 +345,10 @@ function setSelectedItems(rows)
 	$.each(rows, function(index, element) {
 		let template = $("#template").clone();
 		
+		let id = element.VBELN + "_" + element.POSNR;
+		
+		$(template).find("table").attr("id", id);
+		
 		$(template).find("[data-key=order-no]").text(element.VBELN);
 		$(template).find("[data-key=line-item]").text(element.POSNR);
 		$(template).find("[data-key=order-part-no]").text(element.MATNR);
@@ -294,7 +357,7 @@ function setSelectedItems(rows)
 		$(template).find("[data-key=claim-qty]").html("<input type='text'' name='reqQty' class='custom-ui' value='" + element.KWMENG + "' orderQty='" + element.KWMENG + "'/>");
 		$(template).find("[data-key=uom]").text(element.VRKME);
 		$(template).find("[data-key=net-price]").text(element.NETPR);
-		$(template).find("[data-key=net-value]").text(element.KBETR);
+		$(template).find("[data-key=net-value]").text(element.T_NETWR);
 		$(template).find("[data-key=order-date]").text(element.ERDAT);
 		$(template).find("input[name=orderNo]").val(element.VBELN);
 		$(template).find("input[name=lineNo]").val(element.POSNR);
@@ -305,6 +368,9 @@ function setSelectedItems(rows)
 		{
 			$("#FORM_claim").append(splitRow);
 		};
+		
+		//업로드 버튼을 클릭했을 때 현재 클릭한 element 를 구분하기 위해 속성 정의
+		$(template).find("button.upload").attr("data-key", "UPLOAD_" + id);
 		
 		$("#FORM_claim").append($(template).html());
 	});
@@ -325,6 +391,8 @@ function setSelectedItems(rows)
 	});
 	
 	$("button.upload").on("click", function() {
+		uploadingTarget = JpUtilsString.trimToEmpty($(this).attr("data-key"));
+		
 		UploadModal.show();
 	});
 };
@@ -374,21 +442,21 @@ $(".dropzone-click-zone").dropzone({
 	success: function(file, response)
 	{
 		let result = response.RESULT;
-		
-		alert(result.ORIGIN_FILE_NAME);
-		
-		/*
-		resultMap.put("ORIGIN_FILE_NAME", multipartFile.getOriginalFilename());
-		resultMap.put("SAVED_FILE_NAME", claimCreateService.saveTempFile(multipartFile));
-		resultMap.put("CONTENT_TYPE", multipartFile.getContentType());
-		resultMap.put("SIZE", multipartFile.getSize());		
-		*/
-		
-		//$("#fileName").val(response.RESULT);
-		//doSimulation();
+		let originalFileName = result.ORIGIN_FILE_NAME;
+		let savedFileName = result.SAVED_FILE_NAME;
+
+		let id = $("#FORM_claim button[data-key=" + uploadingTarget + "]").closest("table").attr("id"); 
+		let content = "<div>" + originalFileName + "<div class='split3'></div><img src='/portal/img/icon/x.png' style='width:10px;' class='cursor-pointer delete-attachment'><input type='hidden' name='attachment_" + id + "' value='" + originalFileName + GLOBAL_CONST.DELIMITER + savedFileName + "'/><div>"; 
+
+		$("#FORM_claim button[data-key=" + uploadingTarget + "]").closest("table").find("[data-key=attachment]").append(content);
+
+		$("img.delete-attachment").on("click", function() {
+			$(this).closest("div").remove();
+		});
 	},
 	complete: function(file)
 	{
+		UploadModal.hide();
 	},
 	error: function(file, error, xhr)
 	{
