--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/display/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/display/list.html
@@ -22,7 +22,7 @@
 				<th th:text="#{HQP_L_COMPLAINT_NO}"></th><!-- Complaint No. -->
 				<td> 
 					<div class="input-area">
-						<input type="text" id="pComplaintNo" name="pComplaintNo" class="custom-ui" th:value="${pComplaintNo}">
+						<input type="text" id="pClaimNo" name="pClaimNo" class="custom-ui" th:value="${pClaimNo}">
 					</div>							
 				</td>
 				<th th:text="#{HQP_L_REFERENCE_NO}"></th><!--Reference No.  -->
@@ -102,7 +102,7 @@ $(function(){
 			url: "[[${BASE_PATH}]]/claim/display/list/data",
 			data: function(p)
 			{
-				p.pComplaintNo 	= $("#pComplaintNo").val();
+				p.pClaimNo 	= $("#pClaimNo").val();
 				p.pReferenceNo	= $("#pReferenceNo").val();
 				p.pPartNo 		= $("#pPartNo").val();
 				p.pFromDate 	= $("#pFromDate").val();
